# Checkers

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/: checkerBoard.vert  piece.frag  piece.vert
include/: Board.hpp  GamePiece.hpp  PieceRenderer.hpp  Shader.hpp  Tile.hpp
src/: Board.cpp  GamePiece.cpp  PieceRenderer.cpp  Shader.cpp  Tile.cpp  main.cpp
